client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
/* ... */
// preview changes
.preview {
    background-color: white!important;
    .st-block-controls__top {
        display: none!important;
    }
    .st-text-block {
        padding: 0px!important;
        border: 0px!important;
        min-height: 0em!important;
    }
    .st-icon, .st-icon--add:after {
        display: none!important;
    }
    .st-block__inner {
        margin: 0px!important;
        padding: 0px!important;
        border: 0px!important;
    }
    .st-block__inner:hover {
        box-shadow: 0px 0px 0px 0px rgba(0,0,0,0)!important;
    }
    .st-image-block {
        border: 0px!important;
        display: inline;
    }
    .st-embed-block {
        border: 0px!important;
        margin: 0px!important;
        font-size: 13px!important;
        padding: 0px!important;
        text-transform: none!important;
        font-weight: normal!important;
    }
    .title-preview, .description-preview, .credit-preview {
        color: black!important;
    }
    .quote-input::before, .st-quote-block::before {
        content:""!important;
        margin: 0px!important;
        padding-right: 0px!important;
    }
    .quote-input {
        font-size: 16px;
        font-weight: 300;
        line-height: 22.5px;
        margin: 0px!important;

    }
    .st-quote-block {
        margin: 0px!important;
        border: 0px!important;
        color: black!important;
    }
    .js-cite-input.st-quote-block {
        font-size:13px!important;
    }
    input {
        border: 0px!important;
        box-shadow: none;
    }
    .local-ad-image {
        max-height: 60vh;
    }
}

.freetype-selector {
    background-color: #fff;
    border: 1px solid #c6c6c6;
    border-radius: 3px;
    box-shadow: 0 3px 5px rgba(0,0,0,.2);
    padding: 10px 10px 5px 10px;
    min-width: 100px;
    width: auto;
    z-index: 2;
    position: absolute;
    right: -60px;
    &.default {
        right: 40px;
    }
    top: 2px;
    li {
        padding: 0px 5px;
        border-radius: 2px;
        margin-right: 0px;
        margin-bottom: 1px;
    }
}
.freetype-selector::before {
    width: 15px;
    height: 22px;
    display: block;
    z-index: 100;
    position: absolute;
    left: -15px;
    top: 10px;
    background: url(/images/dropdown-arrow-side.png) no-repeat;
    content: " ";
}
.freetype-selector .separator {
    border-bottom: 1px solid #ebebeb;
}

.cursor-pointer {
    cursor: pointer;
}

